--- a/apps/angular/projection/src/app/ui/card/card.component.html
+++ b/apps/angular/projection/src/app/ui/card/card.component.html
@@ -1,14 +1,8 @@
 <div
   class="border-2 border-black rounded-md p-4 w-fit flex flex-col gap-3"
   [class]="customClass">
-  <img
-    *ngIf="type === CardType.TEACHER"
-    src="assets/img/teacher.png"
-    width="200px" />
-  <img
-    *ngIf="type === CardType.STUDENT"
-    src="assets/img/student.webp"
-    width="200px" />
+
+  <ng-content select="[head-img]"></ng-content>
 
   <section>
     <app-list-item
@@ -21,7 +15,7 @@
 
   <button
     class="border border-blue-500 bg-blue-300 p-2 rounded-sm"
-    (click)="addNewItem()">
+    (click)="addItem.emit()">
     Add
   </button>
 </div>
